NetBSD Problem Report #50882

From www@NetBSD.org  Wed Mar  2 17:57:49 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 883227ABE8
	for <gnats-bugs@gnats.NetBSD.org>; Wed,  2 Mar 2016 17:57:49 +0000 (UTC)
Message-Id: <20160302175748.B22FD7ACD3@mollari.NetBSD.org>
Date: Wed,  2 Mar 2016 17:57:48 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/dev/ic/bwi.c:3785]: (style) Redundant condition:
X-Send-Pr-Version: www-1.0

>Number:         50882
>Category:       kern
>Synopsis:       src/sys/dev/ic/bwi.c:3785]: (style) Redundant condition:
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Mar 02 18:00:01 +0000 2016
>Closed-Date:    Wed Mar 02 20:00:57 +0000 2016
>Last-Modified:  Wed Mar 02 20:00:57 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160302
>Organization:
>Environment:
>Description:
src/sys/dev/ic/bwi.c:3785]: (style) Redundant condition: gains!=0. 'gains==0 || (gains!=0 && gains.phy_gain!=-1)' is equivalent to 'gains==0 || gains.phy_gain!=-1'

Source code is

    if (gains == NULL || (gains != NULL && gains->phy_gain != -1)) {

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50882 CVS commit: src/sys/dev/ic
Date: Wed, 2 Mar 2016 14:26:16 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Wed Mar  2 19:26:15 UTC 2016

 Modified Files:
 	src/sys/dev/ic: bwi.c

 Log Message:
 PR/50882: David Binderman: Remove redundant code.


 To generate a diff of this commit:
 cvs rdiff -u -r1.26 -r1.27 src/sys/dev/ic/bwi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Wed, 02 Mar 2016 20:00:57 +0000
State-Changed-Why:
Fixed by christos, thanks.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.