PR/50882: David Binderman: Remove redundant code.